# vecasm

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
asm/x86_64/: abi.inc  axpy_f32_avx2.asm  axpy_f32_avx512.asm  axpy_f32_avx512icl.asm  cross3_f32.asm  dot3_f32.asm  dot_f32_avx2.asm  dot_f32_avx512.asm  dot_f32_avx512icl.asm  normalize3_f32.asm  sum_f32_avx2.asm  sum_f32_avx512.asm  sum_f32_avx512icl.asm
bench/: bench_dot.c
include/: vecasm.h  vecasm.hpp
src/: dispatch.c  scalar.c
tests/: test_dot.c
